--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "@dimerapp/edge",
   "version": "2.0.1",
   "description": "Edge renderer for rendering dimer markdown AST",
+  "main": "build/index.js",
+  "type": "module",
+  "files": [
+    "build/src",
+    "build/index.d.ts",
+    "build/index.js"
+  ],
+  "exports": {
+    ".": "./build/index.js",
+    "./utils": "./build/src/utils.js"
+  },
   "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
-    "test": "node japaFile.js",
+    "test": "node --loader=ts-node/esm bin/test.ts",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
-    "commit": "git-cz",
     "release": "np",
     "version": "npm run build",
-    "sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json null"
+    "sync-labels": "github-label-sync --labels .github/labels.json dimerapp/edge"
   },
   "keywords": [
     "dimerapp",
@@ -25,62 +34,40 @@
   "author": "virk,dimerapp",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/mrm-preset": "^3.0.0",
-    "@adonisjs/require-ts": "^2.0.4",
-    "@dimerapp/markdown": "^6.1.0",
-    "@types/node": "^15.0.2",
-    "commitizen": "^4.2.3",
-    "cz-conventional-changelog": "^3.3.0",
-    "del-cli": "^3.0.1",
-    "doctoc": "^2.0.0",
-    "edge.js": "^5.1.1",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-adonis": "^1.3.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "github-label-sync": "^2.0.0",
-    "husky": "^6.0.0",
-    "japa": "^3.1.1",
-    "mrm": "^3.0.1",
-    "np": "^7.5.0",
-    "prettier": "^2.2.1",
-    "ts-dedent": "^2.1.1",
-    "typescript": "^4.2.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md",
-      "commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
-    }
-  },
-  "nyc": {
-    "exclude": [
-      "test"
-    ],
-    "extension": [
-      ".ts"
-    ]
-  },
-  "main": "build/index.js",
-  "files": [
-    "build/src",
-    "build/index.d.ts",
-    "build/index.js"
-  ],
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
-  "np": {
-    "contents": ".",
-    "anyBranch": false
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@dimerapp/markdown": "^7.0.1-0",
+    "@dimerapp/shiki": "^4.0.1-1",
+    "@japa/assert": "^1.3.4",
+    "@japa/run-failed-tests": "^1.0.7",
+    "@japa/runner": "^2.0.9",
+    "@japa/spec-reporter": "^1.1.12",
+    "@swc/core": "^1.2.220",
+    "@types/node": "^18.6.2",
+    "del-cli": "^5.0.0",
+    "edge.js": "^5.3.7",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-adonis": "^3.0.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "github-label-sync": "^2.2.0",
+    "husky": "^8.0.1",
+    "np": "^7.6.2",
+    "prettier": "^2.7.1",
+    "ts-dedent": "^2.2.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "edge-error": "^2.0.3",
-    "escape-goat": "^3.0.0",
-    "hast-util-to-string": "^1.0.4",
-    "property-information": "^5.6.0"
+    "edge-error": "^2.0.8",
+    "escape-goat": "^4.0.0",
+    "hast-util-to-string": "^2.0.0",
+    "html-tags": "^3.2.0",
+    "property-information": "^6.1.1",
+    "stringify-attributes": "^3.0.0"
+  },
+  "peerDependencies": {
+    "@dimerapp/markdown": "^7.0.0-0"
   },
   "directories": {
     "example": "example",
@@ -93,5 +80,50 @@
   "bugs": {
     "url": "https://github.com/dimerapp/edge/issues"
   },
-  "homepage": "https://github.com/dimerapp/edge#readme"
+  "homepage": "https://github.com/dimerapp/edge#readme",
+  "publishConfig": {
+    "access": "public",
+    "tag": "prerelease"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:adonis/typescriptPackage",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
+    }
+  },
+  "eslintIgnore": [
+    "build"
+  ],
+  "prettier": {
+    "trailingComma": "es5",
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": false,
+    "quoteProps": "consistent",
+    "bracketSpacing": true,
+    "arrowParens": "always",
+    "printWidth": 100
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "np": {
+    "contents": "./",
+    "message": "chore(release): %s",
+    "branch": "main",
+    "anyBranch": false
+  }
 }
