--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dimerapp/edge",
-  "version": "2.0.1",
+  "version": "3.0.0-0",
   "description": "Edge renderer for rendering dimer markdown AST",
   "main": "build/index.js",
   "type": "module",
