--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strictPropertyInitialization": true,
     "noImplicitAny": true,
     "strictBindCallApply": true,
+    "sourceMap": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
     "skipLibCheck": true,
