--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "exports": {
     ".": "./build/index.js",
+    "./types": "./build/src/types.js",
     "./utils": "./build/src/utils.js"
   },
   "scripts": {
