--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
   "author": "virk,dimerapp",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@dimerapp/markdown": "^7.0.1-2",
-    "@dimerapp/shiki": "^4.0.1-3",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
+    "@dimerapp/markdown": "^7.0.1",
+    "@dimerapp/shiki": "^4.1.0",
     "@japa/assert": "^1.4.1",
     "@japa/run-failed-tests": "^1.1.1",
     "@japa/runner": "^2.5.1",
     "@japa/spec-reporter": "^1.3.3",
-    "@swc/core": "^1.3.46",
+    "@swc/core": "^1.3.51",
     "@types/node": "^18.15.11",
     "del-cli": "^5.0.0",
     "edge.js": "^5.5.1",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-adonis": "^3.0.3",
     "eslint-plugin-prettier": "^4.2.1",
@@ -60,18 +60,15 @@
     "prettier": "^2.8.7",
     "ts-dedent": "^2.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "edge-error": "^3.0.0",
     "escape-goat": "^4.0.0",
-    "hast-util-to-string": "^2.0.0",
     "html-tags": "^3.3.1",
-    "property-information": "^6.2.0",
-    "stringify-attributes": "^4.0.0"
+    "property-information": "^6.2.0"
   },
   "peerDependencies": {
-    "@dimerapp/markdown": "^7.0.1-2"
+    "@dimerapp/markdown": "^7.0.1"
   },
   "directories": {
     "example": "example",
