--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "node --loader=ts-node/esm bin/test.ts",
+    "test": "npm run quick:test",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
@@ -28,6 +28,7 @@
     "format": "prettier --write .",
     "release": "np",
     "version": "npm run build",
+    "quick:test": "node --loader=ts-node/esm bin/test.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json dimerapp/edge"
   },
   "keywords": [
@@ -38,29 +39,29 @@
   "author": "virk,dimerapp",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@dimerapp/markdown": "^7.0.2",
-    "@dimerapp/shiki": "^4.1.1",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@dimerapp/markdown": "^7.0.3",
+    "@dimerapp/shiki": "^4.1.2",
     "@japa/assert": "^1.4.1",
     "@japa/run-failed-tests": "^1.1.1",
     "@japa/runner": "^2.5.1",
     "@japa/spec-reporter": "^1.3.3",
-    "@swc/core": "^1.3.59",
-    "@types/node": "^20.2.3",
+    "@swc/core": "^1.3.78",
+    "@types/node": "^20.5.4",
     "del-cli": "^5.0.0",
-    "edge.js": "^5.5.1",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.7.0",
+    "edge.js": "^6.0.0-9",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-adonis": "^3.0.3",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
-    "np": "^7.7.0",
-    "prettier": "^2.8.8",
+    "np": "^8.0.4",
+    "prettier": "^3.0.2",
     "ts-dedent": "^2.2.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "escape-goat": "^4.0.0",
@@ -68,7 +69,8 @@
     "property-information": "^6.2.0"
   },
   "peerDependencies": {
-    "@dimerapp/markdown": "^7.0.1"
+    "@dimerapp/markdown": "^7.0.3",
+    "edge.js": "^6.0.0-9"
   },
   "directories": {
     "example": "example",
