chore: add engines to package.json file

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "build/index.ts.map",
     "build/index.js"
   ],
+  "engines": {
+    "node": ">=18.16.0"
+  },
   "exports": {
     ".": "./build/index.js",
     "./types": "./build/src/types.js",
