--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "@dimerapp/edge",
   "version": "4.0.0",
-  "description": "Edge renderer for rendering dimer markdown AST",
+  "description": "Edge renderer for rendering the dimer markdown AST to HTML",
   "main": "build/index.js",
   "type": "module",
   "files": [
-    "src",
-    "index.ts",
     "build/src",
     "build/index.d.ts",
-    "build/index.ts.map",
     "build/index.js"
   ],
   "engines": {
@@ -22,16 +19,18 @@
   },
   "scripts": {
     "pretest": "npm run lint",
-    "test": "npm run quick:test",
-    "clean": "del build",
-    "compile": "npm run lint && npm run clean && tsc",
+    "test": "c8 npm run quick:test",
+    "quick:test": "node --import=./tsnode.esm.js --enable-source-maps bin/test.ts",
+    "clean": "del-cli build",
+    "typecheck": "tsc --noEmit",
+    "precompile": "npm run lint && npm run clean",
+    "compile": "tsc",
     "build": "npm run compile",
+    "release": "np",
+    "version": "npm run build",
     "prepublishOnly": "npm run build",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write .",
-    "release": "np",
-    "version": "npm run build",
-    "quick:test": "node --loader=ts-node/esm bin/test.ts",
     "sync-labels": "github-label-sync --labels .github/labels.json dimerapp/edge"
   },
   "keywords": [
@@ -42,42 +41,37 @@
   "author": "virk,dimerapp",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@dimerapp/markdown": "^7.0.3",
-    "@dimerapp/shiki": "^4.1.2",
-    "@japa/assert": "^1.4.1",
-    "@japa/run-failed-tests": "^1.1.1",
-    "@japa/runner": "^2.5.1",
-    "@japa/spec-reporter": "^1.3.3",
-    "@swc/core": "^1.3.78",
-    "@types/node": "^20.5.4",
-    "del-cli": "^5.0.0",
-    "edge.js": "^6.0.0-9",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-adonis": "^3.0.3",
-    "eslint-plugin-prettier": "^5.0.0",
+    "@adonisjs/eslint-config": "^1.2.1",
+    "@adonisjs/prettier-config": "^1.2.1",
+    "@adonisjs/tsconfig": "^1.2.1",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@dimerapp/markdown": "^8.0.0",
+    "@dimerapp/shiki": "^5.0.0",
+    "@japa/assert": "^2.1.0",
+    "@japa/runner": "^3.1.1",
+    "@swc/core": "^1.3.101",
+    "@types/node": "^20.10.5",
+    "c8": "^8.0.1",
+    "del-cli": "^5.1.0",
+    "edge.js": "^6.0.0",
+    "eslint": "^8.56.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
-    "np": "^8.0.4",
-    "prettier": "^3.0.2",
+    "np": "^9.2.0",
+    "prettier": "^3.1.1",
     "ts-dedent": "^2.2.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "escape-goat": "^4.0.0",
     "html-tags": "^3.3.1",
-    "property-information": "^6.2.0"
+    "property-information": "^6.4.0"
   },
   "peerDependencies": {
-    "@dimerapp/markdown": "^7.0.3",
-    "edge.js": "^6.0.0-9"
-  },
-  "directories": {
-    "example": "example",
-    "test": "test"
+    "@dimerapp/markdown": "^8.0.0",
+    "edge.js": "^6.0.0"
   },
   "repository": {
     "type": "git",
@@ -87,49 +81,32 @@
     "url": "https://github.com/dimerapp/edge/issues"
   },
   "homepage": "https://github.com/dimerapp/edge#readme",
-  "publishConfig": {
-    "access": "public",
-    "tag": "latest"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:adonis/typescriptPackage",
-      "prettier"
+  "c8": {
+    "reporter": [
+      "text",
+      "html"
     ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "endOfLine": "auto"
-        }
-      ]
-    }
-  },
-  "eslintIgnore": [
-    "build"
-  ],
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": false,
-    "quoteProps": "consistent",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "printWidth": 100
+    "exclude": [
+      "tests/**"
+    ]
   },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
   },
+  "publishConfig": {
+    "access": "public",
+    "tag": "latest"
+  },
   "np": {
-    "contents": "./",
     "message": "chore(release): %s",
+    "tag": "latest",
     "branch": "main",
     "anyBranch": false
-  }
+  },
+  "eslintConfig": {
+    "extends": "@adonisjs/eslint-config/package"
+  },
+  "prettier": "@adonisjs/prettier-config"
 }
